Removed static Search utility class, moved all code related to node and relationship queries to SearchCommand which now implements the Query interface. Note that SearchCommands must not be re-used. Implemented low-level predicate filtering on graph-based search, i.e. when searching for a node with a related node ID, the relationships between those nodes will be followed and the resulting list will be filtered using the search predicates.