@@ -23,22 +23,17 @@ import org.structr.common.SecurityContext;
 import org.structr.common.error.FrameworkException;
 import org.structr.core.GraphObject;
 import org.structr.core.entity.AbstractNode;
-import org.structr.core.graph.search.Search;
-import org.structr.core.graph.search.SearchAttribute;
 import org.structr.rest.exception.NotFoundException;
 
 //~--- JDK imports ------------------------------------------------------------
 
 import java.util.LinkedList;
 import java.util.List;
-import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import javax.servlet.http.HttpServletRequest;
+import org.structr.core.app.App;
 import org.structr.core.app.StructrApp;
-import org.structr.core.graph.search.SearchCommand;
-import org.structr.core.graph.search.SearchNodeCommand;
-import org.structr.core.graph.search.SearchRelationshipCommand;
 import org.structr.core.property.PropertyKey;
 import org.structr.rest.exception.IllegalPathException;
 import org.structr.rest.exception.NotAllowedException;
@@ -63,22 +58,7 @@ public class UuidResource extends FilterableResource {
 	@Override
 	public Result doGet(PropertyKey sortKey, boolean sortDescending, int pageSize, int page, String offsetId) throws FrameworkException {
 
-		GraphObject obj = null;
-
-		// search for node first, then fall back to relationship
-		try {
-
-			obj = getEntity(SearchNodeCommand.class);
-
-		} catch (NotFoundException nfex1) {
-
-			try {
-
-				obj = getEntity(SearchRelationshipCommand.class);
-
-			} catch (NotFoundException nfex2) {}
-		}
-
+		GraphObject obj = getEntity();
 		if (obj != null) {
 
 			List<GraphObject> results = new LinkedList<>();
@@ -116,44 +96,27 @@ public class UuidResource extends FilterableResource {
 		return super.tryCombineWith(next);
 	}
 
-	public GraphObject getEntity(final Class<? extends SearchCommand> searchCommandType) throws FrameworkException {
+	public GraphObject getEntity() throws FrameworkException {
 
-		List<SearchAttribute> attrs = new LinkedList<>();
-
-		attrs.add(Search.andExactUuid(uuid));
-
-		Result results     = StructrApp.getInstance().command(searchCommandType).execute(attrs);
-		int size           = results.size();
-		GraphObject entity = null;
-
-		switch (size) {
-
-			case 0 :
-				throw new NotFoundException();
-
-			case 1 :
-				
-				entity = results.get(0);
-				
-				if (entity instanceof AbstractNode && !securityContext.isReadable((AbstractNode)entity, true, false)) {
-					throw new NotAllowedException();
-				}
-				
-				entity.setSecurityContext(securityContext);
-				
-				return entity;
-
-			default :
-				logger.log(Level.SEVERE, "Got more than one result for UUID {0}, this is very likely to be a UUID collision!", uuid);
-
-				entity = results.get(0);
-				
-				entity.setSecurityContext(securityContext);
-				
-				return entity;
-
+		final App app = StructrApp.getInstance();
+		
+		GraphObject entity = app.nodeQuery().uuid(uuid).getFirst();
+		if (entity == null) {
+			
+			entity = app.relationshipQuery().uuid(uuid).getFirst();
 		}
 
+		if (entity == null) {
+			throw new NotFoundException();
+		}
+
+		if (entity instanceof AbstractNode && !securityContext.isReadable((AbstractNode)entity, true, false)) {
+			throw new NotAllowedException();
+		}
+
+		entity.setSecurityContext(securityContext);
+
+		return entity;
 	}
 
 	public String getUuid() {
